<resources>
    <!-- Strings for Savnac Login and Signup Activities -->
    <string name="app_name">Savnac</string>
    <string name="savnac_login_title">Savnac\nLogin</string>
    <string name="savnac_signup_title">Savnac\nSignup</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_creating_a_teacher_account">Are you creating a Teacher account?</string>
    <string name="enter_course_name">Enter Course name</string>
    <string name="enter_student_name">Enter Student name</string>
    <string name="add_student">Add student</string>
    <string name="please_enter_to_confirm">Please enter to confirm</string>
    <string name="please_enter_to_admit_student_name_above">Please enter to admit student name above</string>
    <string name="enter_assignment_name">Enter assignment name</string>
    <string name="maximum_points">Maximum points</string>
    <string name="press_enter_to_confirm">Press enter to confirm</string>
    <string name="your_current_courses">Your current courses</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="signup_page">Signup Page</string>
    <string name="currently_available_courses">Currently available courses</string>
    <string name="name_of_course">Name of course</string>
    <string name="new_click_here">New? Click here</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="name_of_student">Name of Student</string>
    <string name="grade">Grade</string>

    <!-- Add more strings below -->
</resources>